# Candle

./: Cargo.toml  LICENSE  README.md
nn/: Cargo.toml
nn/benches/: all_marks.rs
nn/src/: conv2d.rs  f.rs  lib.rs  linear.rs  model.rs  ops.rs  tensor.rs
nn/src/optim/: sgd.rs
nn/tests/: linear_test.rs  ops_test.rs
supervised/: Cargo.toml
supervised/src/: class.rs  lib.rs  reg.rs
supervised/src/class/: kMeans.rs  k_means.rs  logistic.rs  svm.rs
supervised/src/reg/: linear.rs  poly.rs  traits.rs
