[package]
name = "nn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = "3.8"
tokio = { version = "1.11.0", features = ["full"] }
rand = "0.8.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all_marks"
harness = false
