[package]
name = "supervised"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.3"
num-traits = "0.2"
num-integer = "0.1.39"
rand = "0.8.4"
ndarray-linalg = "0.13.0"
ndarray-rand = "0.14.0"
